[package]
name = "mirror-hash"
version = "0.1.0"
edition = "2021"
authors = ["José I. O."]
description = "A Rust implementation of the Mirror256 hash function (experimental)"
license = "Apache-2.0"

[dependencies]
rand = "0.8.5"
hex = "0.4.3"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark"
harness = false 